# mint-syntax

./: .pre-commit-config.yaml  README.md  sample.env
.github/: bug-report.yaml  feature-request.yaml
.github/workflows/: auto-add-to-project.yml  ci-backend-integration.yml  ci-backend.yml
backend/: pyproject.toml  ruff.toml
backend/src/: auth.py  config.py  csrf.py  database.py  main.py  models.py  util.py
backend/src/api/: dependencies.py  ideas.py  main.py  util.py
backend/src/api/csrf_security/: csrf.py  dependency.py
backend/src/api/routes/: auth.py  ideas.py  me.py  users.py
backend/src/scripts/: seed_data.py
backend/tests/: conftest.py  data_sample.py  test_auth.py  test_config.py  test_csrf.py  util.py
backend/tests/api/: conftest.py  test_ideas.py  test_routes.py  test_util.py
backend/tests/api/routes/: test_auth.py  test_csrf.py  test_ideas.py  test_me.py  test_users.py
frontend/: .lintstagedrc.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/draft-landing/: index.html  styles.css
frontend/draft-sample-palette/: index.html  style.css
frontend/src/: App.jsx  Register.jsx  main.jsx  styles.css
frontend/src/RegisterForm/: RegisterForm.jsx
frontend/src/components/: ErrorBoundary.jsx  Footer.css  Footer.jsx  Header.jsx  HelpPage.jsx  IdeaForm.jsx  IdeaFormSection.jsx  IdeaSubmissionForm.jsx  IdeasList.jsx  LandingPageContent.jsx  LoginForm.jsx  Pagination.jsx  RegisterForm.jsx  ScrollToHashElement.jsx  Spinny.jsx  TeamMemberCard.jsx  VoteButtons.jsx
frontend/src/hooks/: useApi.js
(+19 files in other folders)
